# churn-prediction

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: run_drift_checks.py  run_inference.py  train_model.py
src/churn_prediction/data/: load_data.py
src/churn_prediction/drift/: data_drift.py  model_drift.py
src/churn_prediction/features/: build_features.py
src/churn_prediction/models/: predict.py  train.py
src/churn_prediction/pipelines/: batch_inference.py  train_pipeline.py
tests/: test_drift.py  test_features.py  test_models.py
